# bioreview-bench

./: .gitignore  ADJUDICATION_PROTOCOL.md  BASELINE_SUITE.md  CITATION.cff  DATASHEET.md  DATA_CURATION_REPORT.md  EVALUATION_PROTOCOL.md  LICENSE  LICENSE_MATRIX.md  LIMITATIONS_AND_ETHICS.md  README.md  RELEASE_NOTES_v3.0.md  RELEASE_V3.md  SESSION_2026-03-10.md  TASK_DEFINITION.md  pyproject.toml
.github/workflows/: baseline-eval.yml  periodic-update.yml
bioreview_bench/: stats.py
docs/: index.html  report.html  v4_diagnostics.md
paper/: outline.md
results/: bm25_val.json  gemini-2.5-flash-lite_test_v2.json  gemini-2.5-flash-lite_val.json  gemini-2.5-flash-lite_val_v2.json  gpt-4o-mini_val.json  leaderboard.json  leaderboard.md  release_manifest.json
results/v3/: bm25_test.json  (+27 more)
scripts/: backfill_concerns.py  bootstrap_state.py  build_ensemble_gt.py  category_breakdown.py  compute_auc_pr.py  create_splits.py  cross_model_validation.py  ensemble_analysis.py  generate_predictions.py  manual_review.py  overnight_collect_v3.sh  postprocess_v1.py  rebuild_release_artifacts.py  rebuild_splits.py  reprocess_editorial_decision.py  run_benchmark.py  source_analysis.py  temporal_analysis.py
tests/: conftest.py  test_baseline.py  test_cli.py  test_concern_extractor.py  test_elife_collector.py  test_ensemble_gt.py  test_generate_predictions.py  test_hf_export.py  test_infer_decision.py  test_leaderboard.py  test_lexical_baseline.py  test_metrics.py  test_models.py  test_rebuild_splits.py  test_release_artifacts.py  test_runner_aggregation.py  test_schema_validator.py  test_stats_tools.py  test_update_pipeline.py  test_validate_tools.py
(+54 files in other folders)
