[project]
name = "bioreview-bench"
version = "1.0.0"
description = "Benchmark dataset and evaluation harness for AI biomedical peer review tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "JangKeun Kim" },
]
dependencies = [
    "pydantic>=2.7",
    "rich>=13.7",
    "click>=8.1",
    "tqdm>=4.66",
    "scipy>=1.13",
    "numpy>=1.26",
]

[project.optional-dependencies]
collect = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "tenacity>=8.3",
    "lxml>=5.2",
    "python-dotenv>=1.0",
    "pdfplumber>=0.11.9",
]
evaluate = [
    "sentence-transformers>=3.0",
    "scipy>=1.13",
    "numpy>=1.26",
    "datasets>=2.20",
    "huggingface_hub>=0.23",
]
baseline = [
    "anthropic>=0.40",
    "tenacity>=8.3",
    "openai>=1.30",
    "rich>=13.7",
]
hub = [
    "huggingface_hub>=0.23",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
bioreview-collect = "bioreview_bench.scripts.collect_elife:main"
bioreview-update = "bioreview_bench.scripts.update_pipeline:main"
bioreview-run = "bioreview_bench.scripts.run_benchmark:main"
bioreview-baseline = "bioreview_bench.scripts.run_baseline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
